--- a/index.html
+++ b/index.html
@@ -157,14 +157,18 @@
             <div class="flex-row">
                 <h2 class="section-title primary-border">Meet The Trainers</h2>
             </div>
-
             <div class="trainers">
                 <!-- first trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                    <div class="trainer-img trainer-1">
+                        <div>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio" >
-                        <h3 class="trainer-name">Arron Stephens</h3>
-                        <h4 class="trainer-role">Speed / Strength</h4>
+                        <h3>Arron Stephens</h3>
+                        <h4>Speed / Strength</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi numquam reiciendis quas aperiam adipisci maxime ea autem eos, quis consequuntur accusamus enim eius dolore nam sint. Quis possimus veritatis praesentium!
                         </p>
@@ -172,10 +176,15 @@
                 </article>
                 <!-- second trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3>Joanna Gill</h3>
+                            <h4>Endurance</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Joanna Gill</h3>
-                        <h4 class="trainer-role">Endurance</h4>
+                        <h3>Joanna Gill</h3>
+                        <h4>Endurance</h4>     
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi numquam reiciendis quas aperiam adipisci maxime ea autem eos, quis consequuntur accusamus enim eius dolore nam sint. Quis possimus veritatis praesentium!
                         </p>
@@ -184,10 +193,15 @@
 
                 <!-- third trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+                    <div class="trainer-img trainer-3">
+                        <div>
+                            <h3>Harry "the Headband" Smith</h3>
+                            <h4>Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-                        <h4 class="trainer-role">Strength</h4>
+                        <h3>Harry "the Headband" Smith</h3>
+                        <h4>Strength</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi numquam reiciendis quas aperiam adipisci maxime ea autem eos, quis consequuntur accusamus enim eius dolore nam sint. Quis possimus veritatis praesentium!
                         </p>
